# Tinyrenderer

./: .gitignore  CMakeLists.txt  README.md
include/: model.h
src/: main.cpp
